# FFForge

./: .gitignore  CMakeLists.txt  README.md  configure.sh  run.sh
include/: decoder.h  encoder.h  transcoder.h  utils.h
src/: decoder.cpp  encoder.cpp  main.cpp  transcoder.cpp  utils.cpp
